# graph-tool

./: .gitignore  README.md
src/: CMakeLists.txt
src/adjacencyConverter/: AdjacencyConverter.ui  CMakeLists.txt  ConverterWidget.cpp  ConverterWidget.h  CoverterWidget.cpp  CoverterWidget.h  main.cpp
src/utils/: adjacency.cpp  adjacency.h
